--- a/projetofinal/pom.xml
+++ b/projetofinal/pom.xml
@@ -74,7 +74,15 @@
 			<artifactId>jquery-mask-plugin</artifactId>
 			<version>1.14.16</version>
 		</dependency>
-			
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
